<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_discover"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/color_toolbar"
        android:fitsSystemWindows="true"
        app:menu="@menu/activity_discover_drawer" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="@dimen/sixteen_dp"
            android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/side_menu_toolbar"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/thirty_dp"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/teresa"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/ten_dp"
                android:layout_height="wrap_content">
                <com.mystrimz.android.fonts.MontserratMediumTextView
                    android:layout_width="wrap_content"
                    android:id="@+id/user_name"
                    android:textSize="@dimen/sixteen_sp"
                    android:text="Mother Teresa"
                    android:textColor="@color/color_white"
                    android:layout_height="wrap_content" />
                <com.mystrimz.android.fonts.MontserratRegularTextView
                    android:id="@+id/update_info"
                    android:layout_width="wrap_content"
                    android:layout_below="@id/user_name"
                    android:text="@string/update_logo_and_info"
                    android:textColor="@color/button_color"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </LinearLayout>
        <com.mystrimz.android.fonts.MontserratMediumTextView
            android:layout_width="wrap_content"
            android:text="Privacy Settings"
            android:id="@+id/privacy_setting"
            android:layout_below="@+id/side_menu_toolbar"
            android:textSize="@dimen/sixteen_sp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:textColor="@color/color_white"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/lin2"
            android:layout_marginBottom="@dimen/ten_dp"
            android:layout_below="@+id/privacy_setting"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/on"
                android:id="@+id/every_one_can_follow"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_height="wrap_content" />
            <com.mystrimz.android.fonts.MontserratRegularTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/fourteen_sp"
                android:text="@string/everyone_can_follow_my_posts"
                android:textColor="@color/color_white"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/line3"
            android:layout_below="@+id/lin2"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/off"
                android:layout_gravity="center_vertical"
                android:id="@+id/approve_menualy"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_height="wrap_content" />
            <com.mystrimz.android.fonts.MontserratRegularTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/approve_manualy_each_request"
                android:textColor="@color/color_white"
                android:textSize="@dimen/fourteen_sp"
                />
        </LinearLayout>

        <com.mystrimz.android.fonts.MontserratMediumTextView
            android:layout_below="@+id/line3"
            android:id="@+id/email_noti"
            android:layout_width="wrap_content"
            android:text="Email Notifications"
            android:layout_marginTop="@dimen/thirty_dp"
            android:textSize="@dimen/sixteen_sp"
            android:layout_marginBottom="@dimen/ten_dp"
            android:textColor="@color/color_white"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/line4"
            android:layout_below="@+id/email_noti"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/ten_dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/toggle"
                android:id="@+id/love_my_playlist"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_height="wrap_content" />

            <com.mystrimz.android.fonts.MontserratRegularTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loved_my_playlist"
                android:textSize="@dimen/fourteen_sp"
                android:textColor="@color/color_white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/line4"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/toggle_on"
                android:id="@+id/followMe"
                android:layout_marginRight="@dimen/ten_dp"
                android:layout_height="wrap_content" />
            <com.mystrimz.android.fonts.MontserratRegularTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/follow_me"
                android:textSize="@dimen/fourteen_sp"
                android:textColor="@color/color_white"
                />
        </LinearLayout>

        <com.mystrimz.android.fonts.MontserratMediumTextView
            android:id="@+id/logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Log Out"
            android:textSize="@dimen/sixteen_sp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/button_color" />
    </RelativeLayout>
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
